--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>komugi0630のポートフォリオ</title>
   <link rel="stylesheet" href="style.css">
 </head>
+<body>
 
   <main>
     <section>
@@ -67,5 +68,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
