--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section>
       <h2>Contact</h2>
       <ul>
-        <li><a href="mailto:257zs06630@student.zen.ac.jp">メールを送る</a></li>
+        <li><a href="mailto:257zs06630@student.zen.ac.jp" target="_blank">メールを送る</a></li>
       </ul>
       <button id="copyMail">メールアドレスをコピー</button>
       <p id="copyMessage"></p>
@@ -55,7 +55,7 @@
       <table>
         <tr>
           <th>2025 年</th>
-          <td>学校法人角川ドワンゴ学園 <a href="https://nnn.ed.jp/">S高等学校</a> 卒業</td>
+          <td>学校法人角川ドワンゴ学園 <a href="https://nnn.ed.jp/" target="_blank">S高等学校</a> 卒業</td>
         </tr>
       </table>
     </section>
@@ -68,6 +68,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
