--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul>
         <li>名前: komugi0630</li>
         <li>所在地: 東京都</li>
-        <li>興味があるもの: 動画編集、Webデザイン</li>
+        <li>興味があるaもの: 動画編集、Webデザイン</li>
       </ul>
     </section>
 
@@ -68,3 +68,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
