--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <h1>komugi0630</h1>
+    <p class="subtitle">Webページ制作・動画編集に挑戦中！</p>
+  </header>
 
   <main>
     <section>
@@ -19,7 +23,7 @@
       <ul>
         <li>名前: komugi0630</li>
         <li>所在地: 東京都</li>
-        <li>興味があるaもの: 動画編集、Webデザイン</li>
+        <li>興味: 動画編集、Webデザイン</li>
       </ul>
     </section>
 
@@ -44,7 +48,7 @@
     <section>
       <h2>Contact</h2>
       <ul>
-        <li><a href="mailto:257zs06630@student.zen.ac.jp" target="_blank">メールを送る</a></li>
+        <li><a href="mailto:257zs06630@student.zen.ac.jp">メールを送る</a></li>
       </ul>
       <button id="copyMail">メールアドレスをコピー</button>
       <p id="copyMessage"></p>
@@ -55,7 +59,7 @@
       <table>
         <tr>
           <th>2025 年</th>
-          <td>学校法人角川ドワンゴ学園 <a href="https://nnn.ed.jp/" target="_blank">S高等学校</a> 卒業</td>
+          <td>学校法人角川ドワンゴ学園 <a href="https://nnn.ed.jp/">S高等学校</a> 卒業</td>
         </tr>
       </table>
     </section>
@@ -68,4 +72,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
