--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
-    <h1>komugi0630</h1>
-    <p class="subtitle">Webページ制作・動画編集に挑戦中！</p>
+    <h1>komugi0630のホームページ</h1>
+    <p class="subtitle">JTML/JavaScrpt/CSSを使用して作ったWebページ</p>
   </header>
 
   <main>
@@ -23,7 +23,7 @@
       <ul>
         <li>名前: komugi0630</li>
         <li>所在地: 東京都</li>
-        <li>興味: 動画編集、Webデザイン</li>
+        <li>興味があるもの: 動画編集、Webデザイン</li>
       </ul>
     </section>
 
@@ -72,3 +72,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
