--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
           <td>Windows, Ubuntu など</td>
         </tr>
         <tr>
-          <th>Frameworks</th>
+          <th>Engine, Frameworks</th>
           <td>Node.js, Express など</td>
         </tr>
         <tr>
-          <th>Tools</th>
+          <th>Tool, MiddleWare</th>
           <td>Git, GitHub, PostgreSQL など</td>
         </tr>
       </table>
@@ -72,4 +72,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
