--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
       <h2>History</h2>
       <table>
         <tr>
-          <th>2025 年</th>
+          <th>2025 年 3月</th>
           <td>学校法人角川ドワンゴ学園 <a href="https://nnn.ed.jp/">S高等学校</a> 卒業</td>
+        </tr>
+        <tr>
+          <th>2025 年 9月</th>
+          <td>普通自動車第一種運転免許</a> 取得見込み</td>
         </tr>
       </table>
     </section>
@@ -72,5 +76,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
