--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>komugi0630のホームページ</h1>
-    <p class="subtitle">JTML/JavaScrpt/CSSを使用して作ったWebページ</p>
+    <p class="subtitle">HTML/JavaScrpt/CSSを使用して作ったWebページ</p>
   </header>
 
   <main>
@@ -76,6 +76,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
